Allows querying credential from user storage providers
Closes #35020

Signed-off-by: Pedro Igor <pigor.craveiro@gmail.com>